# tinyvec

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build-wheels.yml  build_wheels.yml  cibuildwheel.yml
benchmarks/: vector-search-with-filter.md  vector-search.md
benchmarks/python/: pyproject.toml
benchmarks/python/benchmarks/: README.md  constants.py  display_benchmarks.py  insert.py  run_benchmarks.py  utils.py
benchmarks/python/benchmarks/clients/: chroma_search.py  lance_search.py  qdrant_search.py  sqlite_vec_search.py
benchmarks/python/benchmarks/search/: chroma_search.py  lance_search.py  qdrant_search.py  sqlite_vec_search.py  tinyvec_search.py
benchmarks/python/benchmarks/search_filter/: chroma_search.py  lance_search.py  qdrant_search.py  sqlite_vec_search.py  tinyvec_search.py
bindings/nodejs/: README.md  binding.gyp  jest.config.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
bindings/nodejs/scripts/: transferCore.ts
bindings/nodejs/src/: index.ts  tinyvec.d.ts  types.ts  utils.ts
bindings/nodejs/src/addon/: addon.cpp  addon_utils.cpp  addon_utils.h  paginate.cpp  paginate.hpp  tinyvec.cpp  tinyvec.h
bindings/nodejs/src/core/include/: db.h  paginate.h  query_convert.h  utils.h  vec_types.h
bindings/nodejs/src/core/src/: cJSON.c  db.c  distance.c  paginate.c  query_convert.c  utils.c
bindings/nodejs/tests/: connect.test.ts  deleteByFilter.test.ts  deleteById.test.ts  getPaginated.test.ts  insert.test.ts  search.test.ts  searchFilter.test.ts  updateById.test.ts  utils.ts
bindings/python/: MANIFEST.in  README.md  build.py  build_package.py  pyproject.toml  setup.py
bindings/python/scripts/: copy_core_deps.py
bindings/python/src/core/: __init__.py
bindings/python/src/core/include/: db.h  file.h  minheap.h  query_convert.h  vec_types.h
bindings/python/src/core/src/: db.c  distance.c  file.c  paginate.c
bindings/python/src/tinyvec/: __init__.py  client.py  models.py  types.py
bindings/python/src/tinyvec/core/: ctypes_bindings.py  utils.py
bindings/python/tests/: conftest.py  test_connect.py  test_delete_by_filter.py  test_delete_by_id.py  test_get_paginated.py  test_insert.py  test_search.py  test_search_filter.py  test_update_by_id.py  utils.py
src/core/include/: db.h  distance.h  file.h  vec_types.h
src/core/src/: db.c  distance.c  file.c  minheap.c  paginate.c  query_convert.c
tests/: build_tests.bat  greatest.h  test_db.c  test_distance.c  test_file.c  test_minheap.c
