[tool.poetry]
name = "tinyvec-benches"
version = "0.1.0"
description = "Benchmarks for tinyvec"
authors = ["tylerpuig"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10"
chromadb = "1.0.0b0"
psutil = ">=7.0.0,<8.0.0"
lancedb = ">=0.20.0,<0.21.0"
qdrant-client = ">=1.13.2,<2.0.0"
sqlite-vec = ">=0.1.6,<0.2.0"
tinyvecdb = "^0.2.0"
pandas = ">=2.2.3,<3.0.0"
plotly = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"