[project]
name = "tinyvec"
version = "0.1.0"
description = "Tiny vector database"
authors = [
    {name = "tylerpuig"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.0,<=2.2.3",
]

[build-system]
requires = ["setuptools>=75.8.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["tinyvec", "tinyvec.core"]
package-data = {"tinyvec.core" = ["*.dll", "*.so", "*.dylib"]}

[tool.setuptools.exclude-package-data]
"*" = ["tests", "*.tests", "*.tests.*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3"
]